--- a/app/webroot/css/statistics/search_videos.css
+++ b/app/webroot/css/statistics/search_videos.css
@@ -12,13 +12,13 @@
 
 .green-normal
 {
-    background: #73d006; /* Old browsers */
-    background: -moz-linear-gradient(top,  #73d006 0%, #46b204 100%, #46b204 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#73d006), color-stop(43%,#46b204), color-stop(100%,#46b204)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #73d006 0%,#46b204 100%,#46b204 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #73d006 0%,#46b204 100%,#46b204 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #73d006 0%,#46b204 100%,#46b204 100%); /* IE10+ */
-    background: linear-gradient(top,  #73d006 0%,#46b204 100%,#46b204 100%); /* W3C */
+    background: #359476; /* Old browsers */
+    background: -moz-linear-gradient(top, #359476 0%,#00c384 100%,#0CEEA5 100%);/* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#359476), color-stop(43%,#00c384), color-stop(100%,#0CEEA5)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #359476 0%,#00c384 100%,#0CEEA5 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #359476 0%,#00c384 100%,#0CEEA5 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #359476 0%,#00c384 100%,#0CEEA5 100%); /* IE10+ */
+    background: linear-gradient(top, #359476 0%,#00c384 100%,#0CEEA5 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73d006', endColorstr='#46b204',GradientType=0 ); /* IE6-9 */
 }
 
@@ -136,7 +136,8 @@ input.powerRanger:focus {
 
 /***FIRST STYLE THE BUTTON***/
 input#bigbutton {
-width:500px;
+width:410px;
+height: 63px;
 background: #3e9cbf; /*the colour of the button*/
 padding: 8px 14px 10px; /*apply some padding inside the button*/
 border:1px solid #3e9cbf; /*required or the default border for the browser will appear*/
@@ -148,9 +149,9 @@ letter-spacing:.1em;
 text-shadow: 0 -1px 0px rgba(0, 0, 0, 0.3); /*give the text a shadow - doesn't appear in Opera 12.02 or earlier*/
 color: #fff;
 /*use box-shadow to give the button some depth - see cssdemos.tupence.co.uk/box-shadow.htm#demo7 for more info on this technique*/
--webkit-box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 10px 5px #999;
--moz-box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 10px 5px #999;
-box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 10px 5px #999;
+-webkit-box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 7px 0px #1F1F1F;
+-moz-box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 7px 0px #1F1F1F;
+box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 7px 0px #1F1F1F;
 /*give the corners a small curve*/
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;
